--- a/_i18n/ja.yml
+++ b/_i18n/ja.yml
@@ -5,8 +5,8 @@ global:
   thankGreeting: ありがとう！
 
 product:
-  title: ホス
-  detail: 世界を変える
+  title: プロダクト
+  detail: プロダクトページ。プロダクトページ。プロダクトページ。
 
 test:
   title: テスト！
